[package]
name = "common"
version = "0.1.0"
authors = ["Will Hahne <will07c5@gmail.com>"]
edition = "2018"

[dependencies]
base64 = "~0.5.0"
hex = "0.3.2"
rust-crypto = "^0.2"
percent-encoding = "1.0.1"
byteorder = "1.2.7"
rocket = "0.4.0"
reqwest = "0.9.5"
ramp = "0.5"
lazy_static = "1.2.0"

[dependencies.rand]
version = "0.5"
features = ["i128_support"]